fix : header z-index 1000 설정

--- a/src/styles/components/header/Header.css
+++ b/src/styles/components/header/Header.css
@@ -8,6 +8,7 @@
     top: 0;
     width: 100%;
     height: 20px;
+    z-index: 1000;
   }
   
   .nav a {
